--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,10 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
 }
+
+body {
+  font-family: 'Akaya Telivigala', cursive;
+  margin: 0;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');
